--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -330,7 +330,7 @@ vec4 hash44(vec4 p4)
 vec3 importanceSampleDiffuse( vec2 Xi, vec3 N ) {
 	vec3 up = abs( N.x ) > EPS ? vec3( 0.0, 1.0, 0.0 ) : vec3( 1.0, 0.0, 0.0 );
 	vec3 u = normalize( cross( up, N ) );
-	vec3 v = cross( N, u );
+	vec3 v = cross( N, u );// up と u は直交かつ正規化されているので、normalize は不要
 	float r1 = PI2 * Xi.x;
 	float r2 = Xi.y;
 	return ( u * cos( r1 ) + v * sin( r1 ) ) * sqrt( r2 ) + N * sqrt( 1.0 - r2 );
