--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -325,19 +325,35 @@ vec4 hash44(vec4 p4)
 // BRDF
 //
 
-// 完全拡散反射のcos項による重点的サンプリング
+// 完全拡散反射のcos項による重点サンプリング
 // https://github.com/githole/edupt/blob/master/radiance.h
-vec3 importanceSampleDiffuse( vec2 Xi, vec3 N ) {
-	vec3 up = abs( N.x ) > EPS ? vec3( 0.0, 1.0, 0.0 ) : vec3( 1.0, 0.0, 0.0 );
-	vec3 u = normalize( cross( up, N ) );
-	vec3 v = cross( N, u );// up と u は直交かつ正規化されているので、normalize は不要
-	float r1 = PI2 * Xi.x;
-	float r2 = Xi.y;
-	return ( u * cos( r1 ) + v * sin( r1 ) ) * sqrt( r2 ) + N * sqrt( 1.0 - r2 );
+vec3 importanceSampleDiffuse(vec2 Xi, vec3 normal) {
+	vec3 up = abs(normal.x) > EPS ? vec3(0.0, 1.0, 0.0) : vec3(1.0, 0.0, 0.0);
+	vec3 tangent = normalize(cross(up, normal));
+	vec3 binormal = cross(normal, tangent);// up,tangent は直交かつ正規化されているので、normalize 不要
+
+	// θ,φは極座標系の偏角。cosθにより重点サンプリングをしたい
+	// 任意の確率密度関数fを積分した累積分布関数Fの逆関数を一様乱数に噛ませれば、
+	// 任意の確率密度を持つ確率変数を得ることができる（逆関数法）
+	// - f(θ,φ) = cos(θ)/PI
+	// - F(θ,φ) = ∬f(θ,φ) dθdφ = φ/2PI * (1 - (cosθ)^2)
+	// - F(θ) = 1 - (cosθ)^2
+	// - F(φ) = φ/2PI
+	// Fの逆関数から、角度θ,φを求めることができるので、
+	//float theta = asin(sqrt(Xi.y));// θは整理すると消去できるのでコメントアウト
+	float phi = PI2 * Xi.x;
+
+	// サンプリング方向 result は極座標から直交座標への変換によって求められる
+	// result = tangent * sin(theta) * cos(phi) + binormal * sin(theta) * sin(phi) + normal * cos(theta))
+	// ここで、r = Xi.y と置くと、result を整理できる
+	// - sin(theta) = sin(asin(sqrt(Xi.y))) = sqrt(Xi.y) = sqrt(r)
+	// - cos(theta) = sqrt(1.0 - sin(theta) * sin(theta)) = sqrt(1.0 - r)
+	float r = Xi.y;
+	return (tangent * cos(phi) + binormal * sin(phi)) * sqrt(r) + normal * sqrt(1.0 - r);
 }
 
 // Unreal Engine 4 で利用されている ImportanceSampleGGX を GLSL に移植
-// cos項による重点的サンプリング
+// cos項による重点サンプリング
 // http://project-asura.com/blog/?p=3124
 vec3 importanceSampleGGX( vec2 Xi, float Roughness, vec3 N ) {
 	float a = Roughness * Roughness;
