--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -272,18 +272,6 @@ float dScene(vec3 p) {
 	return dMbox(p);
 }
 
-float dSceneBump(vec3 p) {
-	float d = dScene(p);
-
-	//float t3 = lTime - META_SCENE_END_TIME;
-	//if (t3 < 10.0) {
-	//	d -= mix(0.08, 0.0, saturate(t3 * 0.1)) * fbm(10.0 * p.xz + 5.0 * p.y);
-	//}
-
-	return d;
-}
-
-
 // color functions
 vec3 hsv2rgb(vec3 c) {
 	vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
@@ -356,17 +344,8 @@ void calcRadiance(inout Intersection intersection, inout Ray ray, int bounce) {
 		float ao = calcAo(intersection.position, intersection.normal);
 		float shadow = calcShadow(intersection.position, lightDir);
 
-		vec3 fleshNormal = calcNormal(intersection.position, dSceneBump);
-		float fleshDiffuse = clamp(dot(lightDir, fleshNormal), 0.2, 1.0) * 0.5 + 0.5;
-		vec3 fleshBase =  mix(vec3(1.0, 0.2, 0.2), vec3(0.3, 0.0, 0.0), fbm(2.0 * intersection.position.xz));
-		vec3 flesh = fleshBase * fleshDiffuse * ao * shadow + 0.1 * specular;
-
-		float v = (META_SCENE_END_TIME <= lTime && lTime <= UFO_SCENE_END_TIME) ? 0.8 : 0.5;
-		vec3 metalBase = hsv2rgb(vec3(0.1 * intersection.count, 0.3 * sin(lTime), v));
-		vec3 metal = metalBase * diffuse * ao * shadow + 0.1 * specular;
-
-		intersection.color = mix(flesh, metal, intersection.metalness);
-		intersection.normal = mix(fleshNormal, intersection.normal, intersection.metalness);
+		vec3 metalBase = hsv2rgb(vec3(0.1 * intersection.count, 0.7 * sin(lTime), 0.9));
+		intersection.color = metalBase * diffuse * ao * shadow + 0.1 * specular;
 
 		// fog
 		intersection.color = mix(intersection.color, 0.8 * vec3(0.7, 0.75, 0.8), min(1.0, pow(0.02 * intersection.distance, 2.0)));
