--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -267,8 +267,31 @@ float dMbox(vec3 z) {
 	return r / abs(dr);
 }
 
+
+float random(in vec2 p) {
+    return fract(sin(dot(p.xy, vec2(12.34, 56.78))) * 90.0);
+}
+
+// https://www.shadertoy.com/view/MsXfzB
+float sdFloor(in vec3 p) {
+    return p.y;
+}
+
+float sdBuildings(in vec3 p) {
+    vec3 pp = mod(p, 1.) - .5;
+    float height = random(p.xz - mod(p.xz, 1.)) *3.;
+    float nearness = max(floor(p.z) - time - 2., 0.3);
+    nearness = pow(nearness, .3);
+    pp.y = p.y * 0.4 * nearness - height * 0.1;
+    return length(max(abs(pp) - .25, .0));
+}
+
+float sdGround(vec3 p) {
+    return min(sdFloor(p), sdBuildings(p));
+}
+
 float dScene(vec3 p) {
-	return dMbox(p);
+	return min(dMbox(p), sdGround(p - vec3(0.0, -5.0, 0.0)));
 }
 
 // color functions
